@@ -1,5 +1,6 @@
 01/11/2010
 - added \n to the compiled code of the {if},{else},{elseif},{/if} tags to get output of newlines as expected by the template source
+- added missing support of insert plugins
 
 01/09/2010
 - bugfix on nocache {block} tags in parent templates
